Tercer Punto de guardado Guia 6 - Java Intro

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@
 /EjercicioExtra10/build/
 /Ejercicio12/build/
 /POOEj01/nbproject/private/
+/Ejercicio21/nbproject/private/
+/Ejercicio21/build/
+/EjercicioExtra09/nbproject/private/
+/EjercicioExtra09/build/
+/EjercicioExtra11/nbproject/private/
+/EjercicioExtra11/build/
+/EjerciciosExtra12/nbproject/private/
+/EjerciciosExtra12/build/
