Cuarto Punto de guardado Guia 6 - Java Intro

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,25 @@
 /EjercicioExtra11/build/
 /EjerciciosExtra12/nbproject/private/
 /EjerciciosExtra12/build/
+/EjercicioExtra13/nbproject/private/
+/EjercicioExtra12/nbproject/private/
+/EjercicioExtra12/build/
+/EjercicioExtra13/build/
+/EjercicioExtra14/nbproject/private/
+/EjercicioExtra14/build/
+/EjercicioExtra15/nbproject/private/
+/EjercicioExtra15/build/
+/EjercicioExtra16/nbproject/private/
+/EjercicioExtra16/build/
+/EjercicioExtra17/nbproject/private/
+/EjercicioExtra18/nbproject/private/
+/EjercicioExtra18/build/
+/EjercicioExtra19/nbproject/private/
+/EjercicioExtra19/build/
+/EjercicioExtra17/build/
+/EjercicioExtra20/nbproject/private/
+/EjercicioExtra20/build/
+/EjercicioExtra22/nbproject/private/
+/EjercicioExtra22/build/
+/EjercicioExtra21/nbproject/private/
+/EjercicioExtra21/build/
